--- a/templates/nuevo_producto.html
+++ b/templates/nuevo_producto.html
@@ -71,7 +71,7 @@
                             </svg>
                             Nombre del Producto
                         </label>
-                        <input type="text" name="nombre" class="form-input" placeholder="Ej: iPhone 15 Pro Max" required>
+                        <input type="text" name="nombre" class="form-input" placeholder="Escribe aquí" required>
                     </div>
                     <div class="form-group">
                         <label class="form-label">
